@@ -261,6 +261,15 @@ SCIP_RETCODE initConcsolver(
    data->nvars = SCIPgetNVars(scip);
    vars = SCIPgetVars(scip);
 
+   /* we force the copying of symmetry constraints that may have been detected during a central presolving step;
+    * otherwise, the copy may become invalid */
+   if( SCIPsetBoolParam(scip, "constraints/orbitope/forceconscopy", TRUE) != SCIP_OKAY
+      || SCIPsetBoolParam(scip, "constraints/orbisack/forceconscopy", TRUE) != SCIP_OKAY
+      || SCIPsetBoolParam(scip, "constraints/symresack/forceconscopy", TRUE) != SCIP_OKAY )
+   {
+      SCIPdebugMessage("Could not force copying of symmetry constraints\n");
+   }
+
    /* create the concurrent solver's SCIP instance and set up the problem */
    SCIP_CALL( SCIPcreate(&data->solverscip) );
    SCIP_CALL( SCIPhashmapCreate(&varmapfw, SCIPblkmem(data->solverscip), data->nvars) );
